# cpp-neural-network

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  activation_function.cpp  activation_function.h  common.h  except.cpp  layer.cpp  layer.h  load_data.cpp  load_data.h  loss.cpp  loss.h  main.cpp  mnist_test.cpp  mnist_test.h  network.cpp  network.h  rand.cpp  rand.h  sigma.cpp  sigma.h
